UE5.2.1 - Upgrading to UE 5.2
My apologies for the delay on this update.  As many of you know, SteamVR has been deprecated, which has caused a lot of problems for this project.  From this release forward, we will be using the OpenXR plugin.  If you want tracking to happen in any non-VR game mode, you will have to do either of the following:

1. Launch the engine with the command:
-XRtracking only
https://www.youtube.com/watch?v=GKsPjufVPwg

2.  Utilize the MMVR_OSC or Brekel_OSC tracking methods.  This will accept tracking information either from another instance of MMVR running in editor or from Brekel OpenXR recorder.

NOTE: I have found that putting a Mappable Input Config in the OpenXR Input under Project Settings will completely wreck what trackers will show up.  For this reason, I would recommend using the old input system, where you can import a .ini file into your Project Settings/Input.

As a result of SteamVR being deprecated, I removed any nodes that utilitzed this framework.  Unfortunately, this means we can no longer access skeletal hand data from the Valve Index controllers.  The new default for finger curls is the InputDriven method, which similarly looks at button presses on the controller to animate the hands.

The CC3 body solver seemed messed up after migrating, so I redid that set up.  It should have nicer shoulder movements now.

Added a touchpad touch events to player pawn and MMVR OSC transmitters/receivers.

I tested all the set ups in the system, but seeing as there are a lot of features please let me know if you encounter any bugs!

--- a/Input_IndexViveMixedRealityOculus.ini
+++ b/Input_IndexViveMixedRealityOculus.ini
@@ -65,6 +65,7 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
 bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
@@ -115,6 +116,16 @@ ActionMappings=(ActionName="IndexL_Grip",bShift=False,bCtrl=False,bAlt=False,bCm
 ActionMappings=(ActionName="IndexL_Grip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
 ActionMappings=(ActionName="IndexL_Grip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
 ActionMappings=(ActionName="IndexL_Grip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
+ActionMappings=(ActionName="IndexL_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Trackpad_Touch)
+ActionMappings=(ActionName="IndexL_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trackpad_Touch)
+ActionMappings=(ActionName="IndexL_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Trackpad_Touch)
+ActionMappings=(ActionName="IndexL_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Touch)
+ActionMappings=(ActionName="IndexR_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Trackpad_Touch)
+ActionMappings=(ActionName="IndexL_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Touch)
+ActionMappings=(ActionName="IndexR_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trackpad_Touch)
+ActionMappings=(ActionName="IndexR_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Trackpad_Touch)
+ActionMappings=(ActionName="IndexR_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Touch)
+ActionMappings=(ActionName="IndexR_TrackpadTouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Thumbstick_Touch)
 AxisMappings=(AxisName="IndexR_Thumbstick_Y",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_Y)
 AxisMappings=(AxisName="IndexL_Thumbstick_Y",Scale=1.000000,Key=ValveIndex_Left_Thumbstick_Y)
 AxisMappings=(AxisName="IndexR_Thumbstick_X",Scale=1.000000,Key=ValveIndex_Right_Thumbstick_X)
